config/deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subride
  labels:
    app: subride
spec:
  selector:
    matchLabels:
      app: subride
  replicas: 1
  template:
    metadata:
      name: subride
      labels:
        app: subride
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: subride
          image: docker.io/tmdrb0912/subride:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

---

apiVersion: v1
kind: Service
metadata:
  name: subride
spec:
  type: ClusterIP
  selector:
    app: subride
  ports:
    - name: subride
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subride
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: subride.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: subride
                port: 
                  number: 8080
